--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Decentralized Game Example</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <script src="./js/phaser.min.js"></script> 
-    <script src="./js/breakout.js"></script> 
+    <script src="./js/superChainFighterTurbo.js"></script> 
     <style type="text/css">
         body {
             margin: 0;
