--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Decentralized Game Example</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+    <script src="https://unpkg.com/moralis/dist/moralis.js"></script>
     <script src="./js/phaser.min.js"></script> 
     <script src="./js/superChainFighterTurbo.js"></script> 
     <style type="text/css">
@@ -15,6 +17,11 @@
 </head>
 
 <body>
+    <br>
+    <button id="btn-login">Moralis Metamask Login</button>
+    <button id="btn-logout">Logout</button>
+    <br><br>
+    <script type="text/javascript" src="./main.js"></script>
 
     <div id="phaser-example"></div>
 
