--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <button id="btn-login">Moralis Metamask Login</button>
     <button id="btn-logout">Logout</button>
     <br><br>
-    <script type="text/javascript" src="./main.js"></script>
+    <script type="text/javascript" src="./login.js"></script>
 
     <div id="phaser-example"></div>
 
