two characters and health

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>Decentralized Game Example</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <script src="./js/phaser.min.js"></script> 
-    <script src="./js/superChainFighterTurbo.js"></script> 
+    <script src="./js/superChainFighterTurbo.js"></script>
+    <script src='https://cdn.jsdelivr.net/npm/phaser-component-health@3.0.0/dist/phaser-component-health.umd.js'></script>
+
     <style type="text/css">
         body {
             margin: 0;
